--- a/unionread_extensions/via/index.html
+++ b/unionread_extensions/via/index.html
@@ -27,18 +27,35 @@
 							<button type="button" class="btn btn-link btn-sm" onclick="operate(1007)" id="operate-1007">安装</button>
 						</div>
 						<input style="display: none !important" id="addon-1007" data-id="1007" data-name="联合阅读辅助插件" data-info="<p>作家助手自动修正到电脑模式</p>" data-author="qidian55" data-code="" data-url="*" data-status="0">
-						<textarea id="1" style="display:none;">/*联合阅读辅助插件*/
+						<textarea id="1" style="display:none;">/*
+* @name: 联合阅读辅助插件
+* @Author: qidian55
+* @version: 200524.16
+* @description: 联合阅读辅助插件
+* @include: *.unionread.vip
+* @createTime: 2020-05-22 00:00:00
+* @updateTime: 2020-05-24 16:00:00
+*/
 (function() {
 	if (location.host.substr(location.host.length - 13) === "unionread.vip") {
+		/*解决评论换行显示问题*/
+		document.head.innerHTML+="<style>.pl-box-ctt{white-space:pre-wrap;}.fn16{white-space:pre-wrap;}</style>";
+		/*自动重定向*/
 		var url = location.href;
 		if (location.href.includes('?')) url += "&";
 		else url += "?";
 		if (location.pathname.substr(0, 14) === "/module/author") url += "pt=web";
 		else url += "pt=m";
-		if (location.pathname.substr(0, 14) !== "/module/author" ^ document.head.outerHTML.includes("apple-mobile-web-app")) location.href = url;
-		if (location.pathname === "/module/user/home.php") document.getElementsByTagName('ul')[0].outerHTML += '<li><a href=\"/module/author/index.php\"><img src=\"/templates/wmcms-m/img/shouye.png\" class=\"vm mrm\"><em>作家中心</em></a></li>';
+		if (location.pathname.substr(0, 14) === "/module/author" ^ document.head.innerHTML.includes("wmcms-web")) location.href = url;
+		/*添加“作家中心”入口点*/
+		if (location.pathname === "/module/user/home.php") document.getElementsByTagName('ul')[0].innerHTML += '<li><a href=\"/module/author/index.php\"><img src=\"/templates/wmcms-m/img/shouye.png\" class=\"vm mrm\"><em>作家中心</em></a></li>';
+		/*去除段落前后空格*/
 		if (location.pathname === "/module/novel/read.php") {
 			for (var par of document.getElementsByTagName('p')) par.textContent = par.textContent.trim();
+		}
+		/*解决作品信息换行显示问题*/
+		if (location.pathname === "/module/novel/info.php") {
+			document.getElementsByClassName("muma_wap magin")[0].children[1].style.whiteSpace='pre-wrap';
 		}
 	}
 })();</textarea>
