--- a/unionread_extensions/via/index.html
+++ b/unionread_extensions/via/index.html
@@ -26,7 +26,7 @@
 						<div class="col-auto align-self-center">
 							<button type="button" class="btn btn-link btn-sm" onclick="operate(1007)" id="operate-1007">安装</button>
 						</div>
-						<input style="display: none !important" id="addon-1007" data-id="1007" data-name="联合阅读辅助插件" data-info="<p>作家助手自动修正到电脑模式</p>" data-author="qidian55" data-code="" data-url="*" data-status="0">
+						<input style="display: none !important" id="addon-1007" data-id="1007" data-name="联合阅读辅助插件" data-info="<p>非官方渠道解决网站部分bug</p>" data-author="qidian55" data-code="" data-url="*" data-status="0">
 						<textarea id="1" style="display:none;">/*
 * @name: 联合阅读辅助插件
 * @Author: qidian55
